[gd_scene load_steps=16 format=3 uid="uid://c18xmw6pmacss"]

[ext_resource type="Script" path="res://scripts/bolaRoja.gd" id="1_p57eq"]
[ext_resource type="Texture2D" uid="uid://xa4em87l3syg" path="res://textures/circle_05.png" id="2_o1lkx"]
[ext_resource type="Texture2D" uid="uid://blnb6x1ec4m3j" path="res://textures/light_01.png" id="3_mrree"]
[ext_resource type="Texture2D" uid="uid://dm2vyae13jnno" path="res://textures/scorch_01.png" id="4_ae6rt"]

[sub_resource type="Gradient" id="Gradient_o28gg"]
offsets = PackedFloat32Array(0, 0.226601, 0.743842, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mqxli"]
gradient = SubResource("Gradient_o28gg")

[sub_resource type="Curve" id="Curve_o3tve"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.724696, 0.594306), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tvtkt"]
curve = SubResource("Curve_o3tve")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iwo0o"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_tvtkt")
color_ramp = SubResource("GradientTexture1D_mqxli")

[sub_resource type="CircleShape2D" id="CircleShape2D_7oy1v"]
radius = 18.4391

[sub_resource type="Gradient" id="Gradient_eo654"]
offsets = PackedFloat32Array(0, 0.763547, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 0.929412, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8idah"]
gradient = SubResource("Gradient_eo654")

[sub_resource type="Curve" id="Curve_whe7w"]
_data = [Vector2(0, 0.644128), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fflhl"]
curve = SubResource("Curve_whe7w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7cfu7"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.8
scale_max = 1.2
scale_curve = SubResource("CurveTexture_fflhl")
color_ramp = SubResource("GradientTexture1D_8idah")

[node name="rayo" type="RigidBody2D" groups=["proyectil"]]
z_index = 1
collision_layer = 2
collision_mask = 2
mass = 0.1
script = ExtResource("1_p57eq")

[node name="haz" type="GPUParticles2D" parent="."]
amount = 4
process_material = SubResource("ParticleProcessMaterial_iwo0o")
texture = ExtResource("4_ae6rt")
lifetime = 0.3

[node name="bolaRoja" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_o1lkx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7oy1v")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
energy = 2.5
shadow_enabled = true
texture = ExtResource("2_o1lkx")
texture_scale = 4.0
height = 15.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="explota" type="GPUParticles2D" parent="."]
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_7cfu7")
texture = ExtResource("3_mrree")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
